// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid demo -- col 1`] = `
.c16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c17 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c15 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
}

.c15 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c11 {
  position: relative;
}

.c13 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c13::-webkit-input-placeholder {
  color: #abb4c3;
}

.c13::-moz-placeholder {
  color: #abb4c3;
}

.c13:-ms-input-placeholder {
  color: #abb4c3;
}

.c13::placeholder {
  color: #abb4c3;
}

.c8 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c14 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c6 .c7,
.c6 .c9 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c6 .c7:hover,
.c6 .c9:hover {
  color: #4074e1;
}

.c6 .c7 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c6 .c9 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        span
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div>
            <span
              class="c7 c8"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c9 c10"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c11"
          >
            <input
              autocomplete="off"
              class="c12 c13"
              max="12"
              min="0"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        offset
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div>
            <span
              class="c7 c8"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c9 c14"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c11"
          >
            <input
              autocomplete="off"
              class="c12 c13"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        pull
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div>
            <span
              class="c7 c8"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c9 c14"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c11"
          >
            <input
              autocomplete="off"
              class="c12 c13"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        push
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div>
            <span
              class="c7 c8"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c9 c14"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c11"
          >
            <input
              autocomplete="off"
              class="c12 c13"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="padding:10px 0;border:1px solid #ccc;"
  >
    <div
      class="c15"
      type="flex"
    >
      <div
        class="c3 c16"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c3 c17"
        offset="0"
        span="1"
        style="z-index:10;"
      >
        <div
          style="background:red;height:20px;border:1px solid #111;text-align:center;line-height:20px;color:white;"
        >
          target
        </div>
      </div>
      <div
        class="c3 c16"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-offset 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 33.33333333%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      offset="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 1
      </div>
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c3"
      offset="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 2
      </div>
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c4"
      offset="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 3
      </div>
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c5"
      offset="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-order 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      order="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 4, i: 0
      </div>
    </div>
    <div
      class="c1 c3"
      order="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 3, i: 1
      </div>
    </div>
    <div
      class="c1 c4"
      order="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 2, i: 2
      </div>
    </div>
    <div
      class="c1 c5"
      order="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 1, i: 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-pullAndPush 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 33.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 8.33333333%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 16.66666667%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 25%;
}

.c9 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 33.33333333%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 1
      </div>
    </div>
    <div
      class="c1 c3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 2
      </div>
    </div>
    <div
      class="c1 c4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 3
      </div>
    </div>
    <div
      class="c1 c5"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 4
      </div>
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 1
      </div>
    </div>
    <div
      class="c1 c7"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 2
      </div>
    </div>
    <div
      class="c1 c8"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 3
      </div>
    </div>
    <div
      class="c1 c9"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-span 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 58.33333333%;
}

.c9 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
      span="1"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 1
      </div>
    </div>
    <div
      class="c1 c3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 2
      </div>
    </div>
    <div
      class="c1 c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 3
      </div>
    </div>
    <div
      class="c1 c5"
      span="4"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 4
      </div>
    </div>
    <div
      class="c1 c6"
      span="5"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 5
      </div>
    </div>
    <div
      class="c1 c7"
      span="6"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 6
      </div>
    </div>
    <div
      class="c1 c8"
      span="7"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 7
      </div>
    </div>
    <div
      class="c1 c9"
      span="8"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 8
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c31 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.iCLzFO .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.fKkjEX .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.jnGYym .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.fxivHa .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.iKeSNX .c3 {
  padding-left: 0px;
  padding-right: 0px;
}

.bRktLj .c3 {
  padding-left: 1px;
  padding-right: 1px;
}

.McknW .c3 {
  padding-left: 2px;
  padding-right: 2px;
}

.cqgPOe .c3 {
  padding-left: 4px;
  padding-right: 4px;
}

.ATKbB .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.kFbBIk .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.bSxiwH .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.dHqoGl .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.hzohFq .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c30 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c30:before,
.c30:after {
  content: ' ';
  display: table;
}

.c30:after {
  clear: both;
}

.c30 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c29::-webkit-input-placeholder {
  color: #abb4c3;
}

.c29::-moz-placeholder {
  color: #abb4c3;
}

.c29:-ms-input-placeholder {
  color: #abb4c3;
}

.c29::placeholder {
  color: #abb4c3;
}

.c24 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c22 .c23,
.c22 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c22 .c23:hover,
.c22 .c25:hover {
  color: #4074e1;
}

.c22 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c22 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c20 {
  margin-right: 8px;
}

.c18 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c18 .c19 {
  color: #4074e1;
}

.c21 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c16 .c17,
.c16 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c16 .c17:last-child,
.c16 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c16 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c16 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c16 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c7 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c9 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  left: 13px;
  height: 10px;
}

.c6 .c8,
.c6 .c10 {
  line-height: 16px;
}

.c6 .c8 {
  padding-right: 20px;
}

.c6 .c10 {
  padding-left: 20px;
}

.c6 .c8 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        flex
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        align
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c16"
        >
          <div
            checked=""
            class="c17 c18"
          >
            <i
              class="icon__cbox-ed c19 c20 "
            />
            top
          </div>
          <div
            class="c17 c21"
          >
            <i
              class="icon__circle c19 c20 "
            />
            middle
          </div>
          <div
            class="c17 c21"
          >
            <i
              class="icon__circle c19 c20 "
            />
            bottom
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        justify
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c16"
        >
          <div
            checked=""
            class="c17 c18"
          >
            <i
              class="icon__cbox-ed c19 c20 "
            />
            start
          </div>
          <div
            class="c17 c21"
          >
            <i
              class="icon__circle c19 c20 "
            />
            end
          </div>
          <div
            class="c17 c21"
          >
            <i
              class="icon__circle c19 c20 "
            />
            center
          </div>
          <div
            class="c17 c21"
          >
            <i
              class="icon__circle c19 c20 "
            />
            space-around
          </div>
          <div
            class="c17 c21"
          >
            <i
              class="icon__circle c19 c20 "
            />
            space-between
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        gutter
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c22"
        >
          <div>
            <span
              class="c23 c24"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c25 c26"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c27"
          >
            <input
              autocomplete="off"
              class="c28 c29"
              min="0"
              step="1"
              value="16"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="height:40px;border:1px solid #ccc;"
  >
    <div
      class="c30"
      style="height:100%;"
    >
      <div
        class="c3 c31"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c3 c31"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c3 c31"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-align 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.grtDOl .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.iCLzFO .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c3"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c4"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-base 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.iCLzFO .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.fKkjEX .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.jnGYym .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.fxivHa .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c3"
      span="8"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c5"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c7"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c8"
      span="5"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c7"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c5"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-gutter 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.iCLzFO .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.fKkjEX .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.jnGYym .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.fxivHa .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-right: 0px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 0px;
  padding-right: 0px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -1px;
  margin-right: -1px;
}

.c3:before,
.c3:after {
  content: ' ';
  display: table;
}

.c3:after {
  clear: both;
}

.c3 .c1 {
  padding-left: 1px;
  padding-right: 1px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -2px;
  margin-right: -2px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c4 .c1 {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -4px;
  margin-right: -4px;
}

.c5:before,
.c5:after {
  content: ' ';
  display: table;
}

.c5:after {
  clear: both;
}

.c5 .c1 {
  padding-left: 4px;
  padding-right: 4px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c3"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c4"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c5"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c6"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-justify 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.grtDOl .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.iCLzFO .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.fKkjEX .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.jnGYym .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.fxivHa .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.iKeSNX .c1 {
  padding-left: 0px;
  padding-right: 0px;
}

.bRktLj .c1 {
  padding-left: 1px;
  padding-right: 1px;
}

.McknW .c1 {
  padding-left: 2px;
  padding-right: 2px;
}

.cqgPOe .c1 {
  padding-left: 4px;
  padding-right: 4px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="c0"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c3"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c4"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c5"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="c6"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;
